# backend/docs/swagger.json
@@ -112,6 +112,11 @@
         },
         "/api/feed": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a paginated feed for a user (posts from followed users)",
                 "produces": [
                     "application/json"
@@ -165,6 +170,11 @@
         },
         "/api/posts": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a paginated list of posts",
                 "produces": [
                     "application/json"
@@ -203,6 +213,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new post",
                 "consumes": [
                     "application/json"
@@ -249,6 +264,11 @@
         },
         "/api/posts/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a single post by its ID",
                 "produces": [
                     "application/json"
@@ -288,6 +308,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a post by its ID",
                 "tags": [
                     "posts"
@@ -326,6 +351,11 @@
         },
         "/api/upload": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Uploads a media file and returns its storage path",
                 "consumes": [
                     "multipart/form-data"
@@ -370,6 +400,11 @@
         },
         "/api/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a user by their ID",
                 "produces": [
                     "application/json"
@@ -411,6 +446,11 @@
         },
         "/api/users/{id}/followers": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of followers for a user",
                 "produces": [
                     "application/json"
@@ -455,6 +495,11 @@
         },
         "/api/users/{id}/following": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a list of users this user is following",
                 "produces": [
                     "application/json"
@@ -638,6 +683,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
